[package]
name = "cfg_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "*"
regex = "*"
serde = "*"
serde_derive = "*"

[features]
default = ["supported_targets"]
functional = []
supported_targets = ["x86_64-darwin", "x86_64-linux", "x86_64-linux-kernel2", "x86_64-windows", "aarch64-darwin"]
x86_64-darwin = []
x86_64-linux = []
x86_64-linux-kernel2 = []
x86_64-windows = []
aarch64-darwin = []
aarch64-linux = []
